Errors wont work when parser comes as it need mut ref for Handler as well as lexer needs it

--- a/lexer/Cargo.toml
+++ b/lexer/Cargo.toml
@@ -11,3 +11,5 @@ path = "src/lib.rs"
 
 [dependencies]
 toylang-utility = { path = "../utility" }
+toylang-source = { path = "../source" }
+toylang-error = { path = "../error" }
