Lexer error handling again refactored

--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -11,3 +11,5 @@ path = "src/main.rs"
 
 [dependencies]
 toylang-lexer = { path = "../lexer" }
+toylang-error = { path = "../error" }
+toylang-source = { path = "../source" }
