--- a/libftl_error/Cargo.toml
+++ b/libftl_error/Cargo.toml
@@ -1,12 +1,13 @@
 [package]
-name = "toylang-utility"
+name = "ftl_error"
 version = "0.1.0"
 authors = ["Rafał Galczak <r.galczak@gmail.com>"]
 edition = "2018"
 
 [lib]
-name = "utility"
+name = "ftl_error"
 path = "src/lib.rs"
 
 
 [dependencies]
+libftl_source = { path = "../libftl_source" }
