--- a/libftl_source/Cargo.toml
+++ b/libftl_source/Cargo.toml
@@ -1,13 +1,12 @@
 [package]
-name = "toylang-error"
+name = "libftl_source"
 version = "0.1.0"
 authors = ["Rafał Galczak <r.galczak@gmail.com>"]
 edition = "2018"
 
 [lib]
-name = "error"
+name = "ftl_source"
 path = "src/lib.rs"
 
 
 [dependencies]
-toylang-source = { path = "../source" }
