--- a/libftl_lexer/Cargo.toml
+++ b/libftl_lexer/Cargo.toml
@@ -9,6 +9,7 @@ name = "ftl_lexer"
 path = "src/lib.rs"
 
 [dependencies]
-libftl_utility = { path = "../libftl_utility" }
-libftl_source = { path = "../libftl_source" }
+ftl_utility = { path = "../libftl_utility" }
+ftl_source = { path = "../libftl_source" }
 ftl_error = { path = "../libftl_error" }
+ftl_session = { path = "../libftl_session" }
