--- a/libftl_cli/Cargo.toml
+++ b/libftl_cli/Cargo.toml
@@ -12,4 +12,6 @@ path = "src/main.rs"
 [dependencies]
 ftl_lexer = { path = "../libftl_lexer" }
 ftl_error = { path = "../libftl_error" }
-libftl_source = { path = "../libftl_source" }
+ftl_source = { path = "../libftl_source" }
+ftl_utility = { path = "../libftl_utility" }
+ftl_session = { path = "../libftl_session" }
