--- a/libftl_source/Cargo.toml
+++ b/libftl_source/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "libftl_source"
+name = "ftl_source"
 version = "0.1.0"
 authors = ["Rafał Galczak <r.galczak@gmail.com>"]
 edition = "2018"
