--- a/libftl_cli/Cargo.toml
+++ b/libftl_cli/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Rafał Galczak <r.galczak@gmail.com>"]
 edition = "2018"
 
 [[bin]]
-name = "ftlc"
+name = "ftl_cli"
 path = "src/main.rs"
 
 
