made clearer msg errors; introduced error with wrong source fragment beeing displayed

--- a/libftl_parser/Cargo.toml
+++ b/libftl_parser/Cargo.toml
@@ -15,3 +15,5 @@ ftl_lexer = { path = "../libftl_lexer" }
 ftl_error = { path = "../libftl_error" }
 ftl_utility = { path = "../libftl_utility" }
 ftl_source = { path = "../libftl_source" }
+
+log = "0.4"
